fixed the overflow on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ HTML, body {
     font-size: 16px;
     box-sizing: border-box;
     font-family: 'Red Hat Display', sans-serif;
+    overflow-x: hidden;
 }
 
 ::placeholder { 
